--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,6 @@
                 "titleBar.inactiveForeground": "#e7e7e799",
                 "commandCenter.border": "#e7e7e799"
         },
-        "peacock.color": "#dd0531"
+        "peacock.color": "#dd0531",
+        "livePreview.defaultPreviewPath": "/relatedlinks.html"
 }
